feature (bankAccount) make useCase and their tests