@@ -2,14 +2,17 @@ package com.monopoly.monopoly_managment.domain.bank_account;
 
 import com.monopoly.monopoly_managment.domain.bank_account.entities.Transaction;
 import com.monopoly.monopoly_managment.domain.bank_account.events.ValidatedFounds;
-import com.monopoly.monopoly_managment.domain.bank_account.values.Amount;
+
 import com.monopoly.monopoly_managment.domain.bank_account.values.Balance;
-import com.monopoly.monopoly_managment.domain.bank_account.values.Destiny;
-import com.monopoly.monopoly_managment.domain.bank_account.values.Origin;
+
 import com.monopoly.monopoly_managment.domain.bank_account.values.TransactionId;
-import com.monopoly.monopoly_managment.domain.bank_account.values.Type;
+
 import com.monopoly.monopoly_managment.domain.bank_account.values.TypeEnum;
+import com.monopoly.monopoly_managment.domain.property.entities.Owner;
+import com.monopoly.monopoly_managment.domain.property.values.Alias;
 import com.monopoly.monopoly_managment.domain.property.values.OwnerId;
+import com.monopoly.monopoly_managment.domain.property.values.Portfolio;
+import com.monopoly.monopoly_managment.domain.property.values.Token;
 import com.monopoly.shared.domain.generic.DomainEvent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,18 +29,18 @@ class BankAccountTest {
 
   @BeforeEach
   void setUp() {
-    bankAccount = new BankAccount();
-    ownerId = new OwnerId("owner-123");
-    bankAccount.setOwnerId(ownerId);
+    Owner owner = new Owner(OwnerId.of("owner-123"), Alias.of("Alias"), Token.of("Token"), Portfolio.of(List.of("property-123")), null);
+    bankAccount = new BankAccount("owner-123");
+    bankAccount.setOwnerId(owner.getIdentity().getValue());
     bankAccount.setBalance(new Balance(1000.0));
     bankAccount.setTransactions(new ArrayList<>());
 
     transaction = new Transaction(
       TransactionId.of("transaction-123"),
-      Amount.of(200.0),
-      Type.of(TypeEnum.DEPOSIT),
-      Destiny.of("destiny-123"),
-      Origin.of("origin-123")
+      200.0,
+      TypeEnum.DEPOSIT,
+      "destiny-123",
+      "origin-123"
     );
   }
 
@@ -50,13 +53,13 @@ class BankAccountTest {
 
   @Test
   void plusBalance() {
-    bankAccount.plusBalance(transaction);
+    bankAccount.plusBalance(transaction.getAmount());
     assertEquals(1200.0, bankAccount.getBalance().getValue());
   }
 
   @Test
   void minusBalance() {
-    bankAccount.minusBalance(transaction);
+    bankAccount.minusBalance(transaction.getAmount());
     assertEquals(800.0, bankAccount.getBalance().getValue());
   }
 
@@ -69,10 +72,10 @@ class BankAccountTest {
   void validateTransactionInsufficientFunds() {
     Transaction withdrawal = new Transaction(
       TransactionId.of("transaction-124"),
-      Amount.of(2000.0),
-      Type.of(TypeEnum.RETIREMENT),
-      Destiny.of("destiny-124"),
-      Origin.of("origin-124")
+      2000.0,
+      TypeEnum.RETIREMENT,
+      "destiny-124",
+      "origin-124"
     );
     assertThrows(IllegalArgumentException.class, () -> bankAccount.validateTransaction(withdrawal));
   }
@@ -83,10 +86,10 @@ class BankAccountTest {
       bankAccount.getIdentity(),
       ownerId,
       transaction.getIdentity(),
-      transaction.getType().getValue(),
+      transaction.getType(),
       transaction.getAmount(),
-      transaction.getOrigin().getValue(),
-      transaction.getDestiny().getValue()
+      transaction.getOrigin(),
+      transaction.getDestiny()
     );
     assertEquals(1, bankAccount.getTransactions().size());
   }
@@ -97,20 +100,20 @@ class BankAccountTest {
       bankAccount.getIdentity(),
       ownerId,
       transaction.getIdentity(),
-      transaction.getType().getValue(),
+      transaction.getType(),
       transaction.getAmount(),
-      transaction.getOrigin().getValue(),
-      transaction.getDestiny().getValue()
+      transaction.getOrigin(),
+      transaction.getDestiny()
     );
     assertEquals(1, bankAccount.getTransactions().size());
 
     bankAccount.canceledTransaction(
       ownerId,
-      transaction.getIdentity(),
-      transaction.getType().getValue(),
-      transaction.getAmount().getValue(),
-      transaction.getOrigin().getValue(),
-      transaction.getDestiny().getValue()
+      transaction.getIdentity().getValue(),
+      transaction.getType(),
+      transaction.getAmount(),
+      transaction.getOrigin(),
+      transaction.getDestiny()
     );
     assertEquals(0, bankAccount.getTransactions().size());
   }
@@ -119,11 +122,11 @@ class BankAccountTest {
   void cancelNonExistentTransaction() {
     assertThrows(IllegalArgumentException.class, () -> bankAccount.canceledTransaction(
       ownerId,
-      TransactionId.of("non-existent-transaction"),
-      transaction.getType().getValue(),
-      transaction.getAmount().getValue(),
-      transaction.getOrigin().getValue(),
-      transaction.getDestiny().getValue()
+      TransactionId.of("non-existent-transaction").getValue(),
+      transaction.getType(),
+      transaction.getAmount(),
+      transaction.getOrigin(),
+      transaction.getDestiny()
     ));
   }
 
@@ -131,31 +134,31 @@ class BankAccountTest {
   void registerAndCancelDepositTransaction() {
     Transaction depositTransaction = new Transaction(
       TransactionId.of("transaction-125"),
-      Amount.of(300.0),
-      Type.of(TypeEnum.DEPOSIT),
-      Destiny.of("destiny-125"),
-      Origin.of("origin-125")
+      300.0,
+      TypeEnum.DEPOSIT,
+      "destiny-125",
+      "origin-125"
     );
 
     bankAccount.registeredTransaction(
       bankAccount.getIdentity(),
       ownerId,
       depositTransaction.getIdentity(),
-      depositTransaction.getType().getValue(),
+      depositTransaction.getType(),
       depositTransaction.getAmount(),
-      depositTransaction.getOrigin().getValue(),
-      depositTransaction.getDestiny().getValue()
+      depositTransaction.getOrigin(),
+      depositTransaction.getDestiny()
     );
     assertEquals(1, bankAccount.getTransactions().size());
     assertEquals(1300.0, bankAccount.getBalance().getValue());
 
     bankAccount.canceledTransaction(
       ownerId,
-      depositTransaction.getIdentity(),
-      depositTransaction.getType().getValue(),
-      depositTransaction.getAmount().getValue(),
-      depositTransaction.getOrigin().getValue(),
-      depositTransaction.getDestiny().getValue()
+      depositTransaction.getIdentity().getValue(),
+      depositTransaction.getType(),
+      depositTransaction.getAmount(),
+      depositTransaction.getOrigin(),
+      depositTransaction.getDestiny()
     );
     assertEquals(0, bankAccount.getTransactions().size());
     assertEquals(1000.0, bankAccount.getBalance().getValue());
@@ -165,31 +168,31 @@ class BankAccountTest {
   void registerAndCancelRetirementTransaction() {
     Transaction retirementTransaction = new Transaction(
       TransactionId.of("transaction-126"),
-      Amount.of(100.0),
-      Type.of(TypeEnum.RETIREMENT),
-      Destiny.of("destiny-126"),
-      Origin.of("origin-126")
+      100.0,
+      TypeEnum.RETIREMENT,
+      "destiny-126",
+      "origin-126"
     );
 
     bankAccount.registeredTransaction(
       bankAccount.getIdentity(),
       ownerId,
       retirementTransaction.getIdentity(),
-      retirementTransaction.getType().getValue(),
+      retirementTransaction.getType(),
       retirementTransaction.getAmount(),
-      retirementTransaction.getOrigin().getValue(),
-      retirementTransaction.getDestiny().getValue()
+      retirementTransaction.getOrigin(),
+      retirementTransaction.getDestiny()
     );
     assertEquals(1, bankAccount.getTransactions().size());
     assertEquals(900.0, bankAccount.getBalance().getValue());
 
     bankAccount.canceledTransaction(
       ownerId,
-      retirementTransaction.getIdentity(),
-      retirementTransaction.getType().getValue(),
-      retirementTransaction.getAmount().getValue(),
-      retirementTransaction.getOrigin().getValue(),
-      retirementTransaction.getDestiny().getValue()
+      retirementTransaction.getIdentity().getValue(),
+      retirementTransaction.getType(),
+      retirementTransaction.getAmount(),
+      retirementTransaction.getOrigin(),
+      retirementTransaction.getDestiny()
     );
     assertEquals(0, bankAccount.getTransactions().size());
     assertEquals(1000.0, bankAccount.getBalance().getValue());
@@ -200,7 +203,7 @@ class BankAccountTest {
 
     bankAccount.getTransactions().add(transaction);
 
-    bankAccount.validatedFounds(transaction.getIdentity(), transaction.getAmount().getValue(), transaction.getType().getValue());
+    bankAccount.validatedFounds(transaction.getIdentity().getValue(), transaction.getAmount(), transaction.getType());
 
     assertEquals(1000.0, bankAccount.getBalance().getValue());
   }
@@ -210,7 +213,7 @@ class BankAccountTest {
 
     bankAccount.getTransactions().add(transaction);
 
-    bankAccount.notValidatedFounds(transaction.getIdentity(), transaction.getAmount().getValue(), transaction.getType().getValue());
+    bankAccount.notValidatedFounds(transaction.getIdentity().getValue(), transaction.getAmount(), transaction.getType());
 
     assertEquals(0, bankAccount.getTransactions().size());
   }
@@ -220,10 +223,10 @@ class BankAccountTest {
     // Arrange
     Transaction withdrawal = new Transaction(
       TransactionId.of("transaction-124"),
-      Amount.of(2000.0),
-      Type.of(TypeEnum.RETIREMENT),
-      Destiny.of("destiny-124"),
-      Origin.of("origin-124")
+      2000.0,
+      TypeEnum.RETIREMENT,
+      "destiny-124",
+      "origin-124"
     );
 
     IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
@@ -231,10 +234,10 @@ class BankAccountTest {
         bankAccount.getIdentity(),
         ownerId,
         withdrawal.getIdentity(),
-        withdrawal.getType().getValue(),
+        withdrawal.getType(),
         withdrawal.getAmount(),
-        withdrawal.getOrigin().getValue(),
-        withdrawal.getDestiny().getValue()
+        withdrawal.getOrigin(),
+        withdrawal.getDestiny()
       );
     });
 
@@ -245,26 +248,26 @@ class BankAccountTest {
   void testFrom() {
 
     String identity = "bankAccount-123";
-    OwnerId ownerId = new OwnerId("owner-123");
+    Owner owner = new Owner(OwnerId.of("owner-123"), Alias.of("Alias"), Token.of("Token"), Portfolio.of(List.of("property-123")), null);
     Balance initialBalance = new Balance(1000.0);
     List<Transaction> transactions = new ArrayList<>();
     transactions.add(new Transaction(
       TransactionId.of("transaction-123"),
-      Amount.of(200.0),
-      Type.of(TypeEnum.DEPOSIT),
-      Destiny.of("destiny-123"),
-      Origin.of("origin-123")
+      200.0,
+      TypeEnum.DEPOSIT,
+      "destiny-123",
+      "origin-123"
     ));
     List<DomainEvent> domainEvents = new ArrayList<>();
     domainEvents.add(new ValidatedFounds("transaction-123", 200.0, TypeEnum.DEPOSIT));
 
-    BankAccount bankAccount = BankAccount.from(identity, ownerId, initialBalance, transactions, domainEvents);
+    BankAccount bankAccount = BankAccount.from(identity, ownerId.getValue(), domainEvents);
 
     assertNotNull(bankAccount);
     assertEquals(identity, bankAccount.getIdentity().getValue());
-    assertEquals(ownerId, bankAccount.getOwnerId());
+    assertEquals(owner.getIdentity(), bankAccount.getOwnerId());
     assertEquals(1000.0, bankAccount.getBalance().getValue());
     assertEquals(2, bankAccount.getTransactions().size());
-    assertEquals("transaction-123", bankAccount.getTransactions().get(0).getIdentity().getValue());
+    assertEquals("transaction-123", bankAccount.getTransactions().getFirst().getIdentity().getValue());
   }
 }
